# SCAI-Hackathon-2026

./: .gitignore  CONTINUE_HERE.md  README.md  config.py  main.py  pyproject.toml
docs/: NON_TECH_SUMMARY.md  prompts.md
human_eval/: README.md  schema.json
outputs/: baseline_evaluation_report.md  baseline_evaluation_results.json  bias_audit_report.md  bias_audit_results.json  error_taxonomy_report.md  error_taxonomy_results.json  evaluation_log.csv  evaluation_log_live.csv  evaluation_log_old.csv  meta_evaluation_report.md  meta_evaluation_results.json  results.json  summary_report.md
oyez-data/: 1 Ontario v. Quon summary.txt  10 California v. Texas summary.txt  11 NCAA v. Alston summary.txt  12 Financial Oversight Board v. Aurelius summary.txt  13 Espinoza v. Montana Dept of Revenue summary.txt  14 American Legion v. American Humanist Assn summary.txt  15 Kansas v. Glover summary.txt  16 Knick v. Township of Scott summary.txt  17 Gill v. Whitford summary.txt  18 Ohio v. American Express summary.txt  19 Encino Motorcars v. Navarro summary.txt  2 Allen v. Michigan summary.txt  20 Epic Systems v. Lewis summary.txt  3 Brown v. Board of Education of Topeka summary.txt  4 Muldrow v. City of St. Louis, Missouri summary.txt  5 Citizens United v. Federal Election Commission summary.txt  6 Google LLC v. Oracle America Inc summary.txt  7 Torres v. Madrid summary.txt  8 Fulton v. City of Philadelphia summary.txt  9 Van Buren v. United States summary.txt
scripts/: backfill_minimax_csv.py  pivot_results.py  rerun_nli.py  sync_opus_csv.py  visualize_benchmarks.py
(+417 files in other folders)
